kubernetes-prometheus/prometheus-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: prometheues-service
  namespace: monitoring
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9090'
  
spec: 
  selector:
    app: prometheus-server
  type: NodePort
  ports:
  - port: 8080
    targetPort: 9090
    nodePort: 30000
