kubernetes-prometheus/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: prometheus-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: prometheus.example.com
    http:
      paths:
      - backend:
          serviceName: prometheues-service
          servicePort: 8080
  tls:
  - hosts: 
  - prometheus.apps.shaker242.lab
  secretName: prometheus-secret
